<resources>

    <string name="app_name">ProximityBasedAudionPlayerInService</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="stop">Stop</string>
    <string name="previous">previous</string>
    <string name="back">back</string>
    <string name="play">play</string>
    <string name="forward">forward</string>
    <string name="next">next</string>
    <string name="title_activity_main">ProximityBased.AudionPlayerService</string>
    <color name="blue">#0de4ff</color>
    <color name="white">#FFFFFF</color>
    <color name="black">#000000</color>
    <string name="song_title">Song Title</string>
</resources>